Changes for task 8