@@ -7,8 +7,13 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class BookStoreUserDetails implements UserDetails {
+    public UserEntity getUser() {
+        return user;
+    }
+
     private final UserEntity user;
     public BookStoreUserDetails(UserEntity user) {
         this.user = user;
@@ -16,7 +21,7 @@ public class BookStoreUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
